--- a/internal/server/static/index.html
+++ b/internal/server/static/index.html
@@ -23,12 +23,9 @@
                     <p class="mt-2 text-slate-500">코딩 컨벤션 및 정책 관리 도구</p>
                 </div>
                 <div class="text-right">
-                    <div class="flex items-center gap-3 mb-2">
-                        <div class="w-10 h-10 rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-bold text-lg" id="user-avatar"></div>
-                        <div class="flex items-center gap-2">
-                            <div class="font-semibold text-slate-800" id="user-name">Loading...</div>
-                            <span class="badge text-xs px-2 py-1 rounded-full" id="user-role-badge">...</span>
-                        </div>
+                    <div class="flex items-center justify-end gap-2 mb-2">
+                        <span class="font-semibold text-sm px-3 py-1 rounded-full" id="user-role-badge">Loading...</span>
+                        <div class="flex gap-1" id="permission-badges"></div>
                     </div>
                     <div class="text-xs text-slate-500" id="repo-info">📁 Loading...</div>
                 </div>
@@ -51,20 +48,17 @@
             </button>
         </div>
 
-        <!-- User Management Section -->
-        <section id="user-management" class="mb-8">
+        <!-- Role Selection Section -->
+        <section id="role-selection" class="mb-8">
             <h2 class="text-2xl font-semibold text-slate-900 mb-4 border-b border-gray-300 pb-2 flex items-center gap-2">
-                <img src="/icons/users.svg" alt="Users" class="w-6 h-6">
-                사용자 및 역할 관리
+                <img src="/icons/users.svg" alt="Role" class="w-6 h-6">
+                역할 선택
             </h2>
             <details class="bg-white rounded-lg border border-gray-300" open>
-                <summary class="p-4 cursor-pointer font-semibold text-lg text-slate-800 hover:bg-gray-50 rounded-t-lg">사용자 목록</summary>
+                <summary class="p-4 cursor-pointer font-semibold text-lg text-slate-800 hover:bg-gray-50 rounded-t-lg">현재 역할</summary>
                 <div class="p-6 border-t border-gray-300">
-                    <div class="flex justify-between items-center mb-4">
-                        <input type="text" id="user-search" placeholder="🔍 사용자 검색..." class="flex-1 mr-4 px-4 py-2 border border-gray-300 rounded-md text-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none">
-                        <button id="add-user-btn" class="px-4 py-2 bg-green-600 hover:bg-green-500 text-white rounded-md text-sm font-medium">+ 새 사용자 추가</button>
-                    </div>
-                    <div id="users-container" class="space-y-2"></div>
+                    <p class="text-sm text-slate-600 mb-4">대시보드에서 사용할 역할을 선택하세요. 선택한 역할에 따라 편집 권한이 결정됩니다.</p>
+                    <div id="role-selection-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3"></div>
                 </div>
             </details>
         </section>
