--- a/internal/server/static/index.html
+++ b/internal/server/static/index.html
@@ -46,6 +46,9 @@
                 <img src="/icons/template.svg" alt="Template" class="w-5 h-5">
                 템플릿
             </button>
+            <button id="import-btn" class="px-6 py-3 bg-green-600 hover:bg-green-500 text-white rounded-lg font-semibold flex items-center gap-2 shadow-md transition-all">
+                📥 Import
+            </button>
         </div>
 
         <!-- Role Selection Section -->
@@ -207,6 +210,41 @@
             </div>
             <div class="p-6 border-t border-gray-300 bg-amber-50">
                 <p class="text-sm text-amber-800">⚠️ 템플릿을 적용하면 현재 정책이 덮어써집니다. 계속하시겠습니까?</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Import Modal -->
+    <div id="import-modal" class="fixed inset-0 modal-overlay flex items-center justify-center p-4 z-50 hidden">
+        <div class="w-full max-w-lg bg-white rounded-lg shadow-xl border border-gray-300">
+            <header class="p-6 flex items-center justify-between border-b border-gray-300">
+                <h3 class="text-xl font-semibold text-slate-900">📥 컨벤션 가져오기</h3>
+                <button id="close-import-modal" class="text-slate-500 hover:text-slate-800 text-2xl">&times;</button>
+            </header>
+            <div class="p-6 space-y-4">
+                <div>
+                    <label class="block text-sm font-medium text-slate-600 mb-2">파일 경로</label>
+                    <input type="text" id="import-file-path" placeholder="예: docs/coding-standards.md"
+                        class="w-full px-3 py-2 border border-gray-300 rounded-md text-sm focus:ring-2 focus:ring-green-500 outline-none">
+                    <p class="text-xs text-slate-500 mt-1">텍스트 파일 지원</p>
+                </div>
+                <div>
+                    <label class="block text-sm font-medium text-slate-600 mb-2">Import 모드</label>
+                    <div class="flex gap-4">
+                        <label class="flex items-center gap-2 cursor-pointer">
+                            <input type="radio" name="import-mode" value="append" checked class="text-green-600">
+                            <span class="text-sm">Append (기존 유지 + 추가)</span>
+                        </label>
+                        <label class="flex items-center gap-2 cursor-pointer">
+                            <input type="radio" name="import-mode" value="clear" class="text-green-600">
+                            <span class="text-sm">Clear (기존 삭제 후 추가)</span>
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="p-6 border-t border-gray-300 flex justify-end gap-3">
+                <button id="cancel-import-btn" class="px-4 py-2 bg-gray-200 hover:bg-gray-300 text-gray-700 rounded-md">취소</button>
+                <button id="execute-import-btn" class="px-4 py-2 bg-green-600 hover:bg-green-500 text-white rounded-md">Import 실행</button>
             </div>
         </div>
     </div>
