--- a/internal/server/static/index.html
+++ b/internal/server/static/index.html
@@ -216,7 +216,7 @@
 
     <!-- Import Modal -->
     <div id="import-modal" class="fixed inset-0 modal-overlay flex items-center justify-center p-4 z-50 hidden">
-        <div class="w-full max-w-lg bg-white rounded-lg shadow-xl border border-gray-300">
+        <div class="w-[28rem] max-w-[calc(100vw-2rem)] bg-white rounded-lg shadow-xl border border-gray-300">
             <header class="p-6 flex items-center justify-between border-b border-gray-300">
                 <h3 class="text-xl font-semibold text-slate-900">📥 컨벤션 가져오기</h3>
                 <button id="close-import-modal" class="text-slate-500 hover:text-slate-800 text-2xl">&times;</button>
